update jmeter to 3.1 version